--- a/svc/hecate/src/common/components/button-wrapper/styles.module.scss
+++ b/svc/hecate/src/common/components/button-wrapper/styles.module.scss
@@ -1,9 +1,36 @@
+// .echoButton {
+//   background: linear-gradient(to left, rgba(255, 0, 255, 0.7), rgba(128, 0, 128, 0.7));
+//   border: 2px solid #ff00ff;
+//   border-radius: 5px;
+//   box-shadow:
+//     0 0 8px #ff00ff,
+//     0 0 20px #800080;
+//   color: white;
+//   margin-bottom: 20px;
+//   text-decoration: none;
+//   padding: 10px 20px;
+//   cursor: pointer;
+//   transition: background-color 0.3s ease;
+//
+//   &:not(:first-child) {
+//     margin-top: 10px;
+//   }
+//
+//   &:hover {
+//     background: linear-gradient(to left, rgba(255, 20, 255, 0.8), rgba(128, 20, 128, 0.8));
+//     box-shadow:
+//       0 0 10px #ff00ff,
+//       0 0 25px #800080;
+//   }
+// }
+
+
 .echoButton {
-  background: linear-gradient(to left, rgba(255, 0, 255, 0.7), rgba(128, 0, 128, 0.7));
-  border: 2px solid #ff00ff;
-  border-radius: 5px;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(128, 0, 128, 0.60));
+  // border: 2px solid #ff00ff;
+  // border-radius: 5px;
   box-shadow:
-    0 0 8px #ff00ff,
+    0 0 8px #7DF9FF,
     0 0 20px #800080;
   color: white;
   margin-bottom: 20px;
@@ -19,8 +46,7 @@
   &:hover {
     background: linear-gradient(to left, rgba(255, 20, 255, 0.8), rgba(128, 20, 128, 0.8));
     box-shadow:
-      0 0 10px #ff00ff,
+      0 0 10px #7DF9FF,
       0 0 25px #800080;
   }
 }
-
