--- a/svc/hecate/src/common/components/echo/styles.module.scss
+++ b/svc/hecate/src/common/components/echo/styles.module.scss
@@ -10,76 +10,73 @@ $base-font-size: 18px;
 
 // Base Echo Screen styles
 .parentContainer {
-  display: flex;
-  flex-direction: row;
-  // justify-content: flex-end; // Align child elements (including .buttonsContainer) to the right
   padding-left: 75px;
-  // padding-right: 200px;
   padding-top: 75px;
+  height: 60%;
+  width: 60%;
 }
 
 .sidebar {
   width: 10%;
-  background-color: transparent;
-  // padding: 0px;
-  // padding-top: 60px;
-  // box-sizing: border-box;
+  // background-color: white;
   z-index: 12;
+  padding-right: 20px;
 }
 
-.mainScreenContent {
-  background-color: blue;
-  width: 60%;
-  padding: 20px;
-  // box-sizing: border-box;
-  // flex-grow: 1;
-  // position: relative;
-}
-//
-// .echoScreen {
+// Black-Green gradient
+// .mainScreenContent {
 //   display: flex;
-//   flex-direction: column;
-//   justify-content: flex-start; // Aligns children to the start of the flex container
-//   align-items: center; // Centers items horizontally, not vertically
-//   background: linear-gradient(to right, rgba(255, 0, 255, 0.5), rgba(128, 0, 128, 0.5));
-//   border: 2px solid #ff00ff;
+//   flex-direction: row;
+//   background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(57, 255, 20, 0.5));
+//   border: 2px solid #39FF14;
 //   border-radius: 10px;
 //   box-shadow:
-//     0 0 8px #ff00ff,
-//     0 0 20px #800080;
-//   color: #ffffff;
-//   flex-direction: column;
-//   height: 550px; /* Longer length */
-//   justify-content: center;
-//   left: 100px; /* Distance from the left edge of the parent container */
-//   padding-top: 0; /* Remove padding from the top */
-//   position: absolute; /* Position screen on the left */
-//   transition: all 0.3s ease;
-//   width: 1200px; /* Smaller width */
-//   z-index: 11; /* Ensure the screen is on top of other elements */
-//
-//   &.loading {
-//     background-color: #f0f0f0;
-//     color: #cccccc;
-//   }
-//
-//   &.success {
-//     background-color: #4caf50;
-//     color: #ffffff;
-//   }
-//
-//   &.error {
-//     background-color: #f44336;
-//     color: #ffffff;
-//   }
-//
-//   &.transitionState {
-//     transition:
-//       background-color 0.5s ease,
-//       color 0.5s ease;
-//   }
+//     0 0 8px #39FF14, /* Neon green glow */
+//     0 0 20px #39FF14; /* Neon green glow */
+//   height: 100%;
+//   width: 100%;
+//   padding: 20px;
 // }
-//
+
+// Black-Blue gradient
+.mainScreenContent {
+  display: flex;
+  flex-direction: row;
+
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(125, 249, 255, 0.5));
+  border: 2px solid #7DF9FF;
+  border-radius: 10px;
+  box-shadow:
+    0 0 8px #7DF9FF, /* Electric light blue glow */
+    0 0 20px #7DF9FF; /* Electric light blue glow */
+
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+}
+
+
+.echoScreen {
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(128, 0, 128, 0.60));
+  // border: 2px solid #ff00ff;
+  border-radius: 10px;
+  box-shadow:
+    0 0 8px #7DF9FF,
+    0 0 20px #800080;
+  color: #ffffff;
+  height: 100%; /* Longer length */
+  width: 100%; /* Full width */
+  justify-content: center;
+  // left: 100px; /* Distance from the left edge of the parent container */
+  // padding-top: 0; /* Remove padding from the top */
+  // position: absolute; /* Position screen on the left */
+  // transition: all 0.3s ease;
+  // width: 1200px; /* Smaller width */
+  // z-index: 11; /* Ensure the screen is on top of other elements */
+}
+
 // .contentWrapper {
 //   display: flex;
 //   flex-direction: column;
