--- a/svc/hecate/src/pages/home/styles.module.scss
+++ b/svc/hecate/src/pages/home/styles.module.scss
@@ -9,8 +9,8 @@
   // background-image: url('../../assets/images/nexoliths_2.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_3.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_4.png'); // Adjust the path according to your project structure
-  background-image: url('../../assets/images/nexoliths_5.png'); // Adjust the path according to your project structure
-  // background-image: url('../../assets/images/nex_gate.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/nexoliths_5.png'); // Adjust the path according to your project structure
+  background-image: url('../../assets/images/nex_gate.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nowhere_bridge.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/crystal_conduit.png'); // Adjust the path according to your project structure
   background-position: center;
@@ -37,11 +37,11 @@
 }
 
 .echoButton {
-  background: linear-gradient(to left, rgba(255, 0, 255, 0.7), rgba(128, 0, 128, 0.7));
-  border: 2px solid #ff00ff;
+  background: linear-gradient(to left, rgba(255, 0, 255, 0.3), rgba(128, 0, 128, 0.3));
+  // border: 2px solid #ff00ff;
   border-radius: 5px;
   box-shadow:
-    0 0 8px #ff00ff,
+    0 0 8px #7DF9FF,
     0 0 20px #800080;
   color: white;
   margin-bottom: 20px;
@@ -57,7 +57,7 @@
   &:hover {
     background: linear-gradient(to left, rgba(255, 20, 255, 0.8), rgba(128, 20, 128, 0.8));
     box-shadow:
-      0 0 10px #ff00ff,
+      0 0 10px #7DF9FF,
       0 0 25px #800080;
   }
 }
