--- a/svc/hecate/src/pages/home/styles.module.scss
+++ b/svc/hecate/src/pages/home/styles.module.scss
@@ -10,7 +10,7 @@
   // background-image: url('../../assets/images/nexoliths_3.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_4.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_5.png'); // Adjust the path according to your project structure
-  // background-image: url('../../assets/images/nex_gate.png'); // Adjust the path according to your project structure
+  background-image: url('../../assets/images/nex_gate.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nowhere_bridge.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/crystal_conduit.png'); // Adjust the path according to your project structure
   background-position: center;
@@ -41,7 +41,7 @@
   // border: 2px solid #ff00ff;
   border-radius: 5px;
   box-shadow:
-    0 0 8px #7DF9FF,
+    0 0 8px #1a1cb5,
     0 0 20px #7DF9FF;
   color: white;
   margin-bottom: 20px;
