--- a/svc/hecate/src/pages/home/styles.module.scss
+++ b/svc/hecate/src/pages/home/styles.module.scss
@@ -5,13 +5,16 @@
   // background-image: url('../../assets/images/nilblock.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nulllrok.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nulllbok.png'); // Adjust the path according to your project structure
-  // background-image: url('../../assets/images/nexoliths.png'); // Adjust the pathn_2according to your project structure
+  background-image: url('../../assets/images/nexoliths.png'); // Adjust the pathn_2according to your project structure
   // background-image: url('../../assets/images/nexoliths_2.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_3.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_4.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_5.png'); // Adjust the path according to your project structure
-  background-image: url('../../assets/images/nex_gate.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/nex_gate.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nowhere_bridge.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/forrest.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/world_0.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/darkmoon.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/crystal_conduit.png'); // Adjust the path according to your project structure
   background-position: center;
   background-size: cover;
@@ -26,15 +29,18 @@
 }
 
 
+
+
 .buttonsContainer {
   position: absolute;
   bottom: 100px; // Adjust this to ensure it fits within the viewport without causing overflow
   right: 200px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  // Remove padding-top as it might cause the buttons to overflow the viewport height
+  gap: 50px;
 }
+
 
 .echoButton {
   background: linear-gradient(to left, rgba(255, 0, 255, 0.3), rgba(128, 0, 128, 0.3));
@@ -49,10 +55,6 @@
   padding: 10px 20px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-
-  &:not(:first-child) {
-    margin-top: 10px;
-  }
 
   &:hover {
     background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba( 26, 28, 181 , 0.35));
