--- a/svc/hecate/src/common/components/moxi/styles.module.scss
+++ b/svc/hecate/src/common/components/moxi/styles.module.scss
@@ -9,7 +9,7 @@
 
 .characterContainer img {
   position: fixed;
-  filter: drop-shadow(0 50px 50px rgba(0,0,0,.75));
+  filter: drop-shadow(0 0 8px #5b00b0) drop-shadow(0 0 40px #fef2ff);
   display: block;
   max-width: 100%;
   height: auto;
