--- a/svc/hecate/src/pages/home/styles.module.scss
+++ b/svc/hecate/src/pages/home/styles.module.scss
@@ -29,8 +29,6 @@
 }
 
 
-
-
 .buttonsContainer {
   position: absolute;
   bottom: 100px; // Adjust this to ensure it fits within the viewport without causing overflow
@@ -43,27 +41,29 @@
 
 
 .echoButton {
-  background: linear-gradient(to left, rgba(255, 0, 255, 0.3), rgba(128, 0, 128, 0.3));
-  // border: 2px solid #ff00ff;
+  background: linear-gradient(to left, rgba(100, 149, 237, 0.5), rgba(25, 25, 112, 0.5));
   border-radius: 5px;
   box-shadow:
-    0 0 8px #1a1cb5,
-    0 0 20px #7DF9FF;
+    0 2px 4px rgba(0, 0, 0, 0.2),
+    inset 0 -4px 2px rgba(0, 0, 0, 0.2);
   color: white;
   margin-bottom: 20px;
-  text-decoration: none;
   padding: 10px 20px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: all 0.3s ease;
+  display: block; // Adjust as needed
+  text-align: center; // Center the text if the buttons are block elements
 
-  &:hover {
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba( 26, 28, 181 , 0.35));
+  &:not(:first-child) {
+    margin-top: 10px;
+  }
+
+  &:hover, &:focus {
+    background: linear-gradient(to right, rgba(65, 105, 225, 0.7), rgba(25, 25, 112, 0.7));
     box-shadow:
-      0 0 10px #7DF9FF,
-      0 0 25px #800080;
+      0 4px 8px rgba(0, 0, 0, 0.3),
+      inset 0 -6px 3px rgba(0, 0, 0, 0.3);
+    color: #E0FFFF; // A lighter shade for contrast
   }
 }
 
-.hidden {
-  visibility: hidden;
-}
