--- a/svc/hecate/src/pages/home/styles.module.scss
+++ b/svc/hecate/src/pages/home/styles.module.scss
@@ -5,8 +5,8 @@
   // background-image: url('../../assets/images/nilblock.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nulllrok.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nulllbok.png'); // Adjust the path according to your project structure
-  background-image: url('../../assets/images/nexoliths.png'); // Adjust the pathn_2according to your project structure
-  // background-image: url('../../assets/images/nexoliths_2.png'); // Adjust the path according to your project structure
+  // background-image: url('../../assets/images/nexoliths.png'); // Adjust the pathn_2according to your project structure
+  background-image: url('../../assets/images/nexoliths_2.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_3.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_4.png'); // Adjust the path according to your project structure
   // background-image: url('../../assets/images/nexoliths_5.png'); // Adjust the path according to your project structure
