--- a/svc/hecate/src/common/components/button-wrapper/styles.module.scss
+++ b/svc/hecate/src/common/components/button-wrapper/styles.module.scss
@@ -5,23 +5,23 @@
     0 2px 4px rgba(0, 0, 0, 0.2),
     inset 0 -4px 2px rgba(0, 0, 0, 0.2);
   color: white;
+  cursor: pointer;
+  display: block; // Adjust as needed
   margin-bottom: 20px;
   padding: 10px 20px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  display: block; // Adjust as needed
   text-align: center; // Center the text if the buttons are block elements
+  transition: all 0.3s ease;
 
   &:not(:first-child) {
     margin-top: 10px;
   }
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     background: linear-gradient(to right, rgba(65, 105, 225, 0.7), rgba(25, 25, 112, 0.7));
     box-shadow:
       0 4px 8px rgba(0, 0, 0, 0.3),
       inset 0 -6px 3px rgba(0, 0, 0, 0.3);
-    color: #E0FFFF; // A lighter shade for contrast
+    color: #e0ffff; // A lighter shade for contrast
   }
 }
-
