--- a/svc/hecate/src/pages/home/styles.module.scss
+++ b/svc/hecate/src/pages/home/styles.module.scss
@@ -18,7 +18,6 @@
   // background-image: url('../../assets/images/crystal_conduit.png'); // Adjust the path according to your project structure
   background-position: center;
   background-size: cover;
-  width: 100vw;
   height: 100vh; // Explicitly set to cover the full view height
   // position: fixed; // Make sure it's fixed and covers the entire viewport
   // top: 0; // Align to the top
@@ -26,19 +25,18 @@
   // margin: 0;
   // padding: 0;
   overflow: hidden; // Prevent any overflow from causing scroll
+  width: 100vw;
 }
-
 
 .buttonsContainer {
-  position: absolute;
+  align-items: center;
   bottom: 100px; // Adjust this to ensure it fits within the viewport without causing overflow
-  right: 200px;
   display: flex;
   flex-direction: row;
-  align-items: center;
   gap: 50px;
+  position: absolute;
+  right: 200px;
 }
-
 
 .echoButton {
   background: linear-gradient(to left, rgba(100, 149, 237, 0.5), rgba(25, 25, 112, 0.5));
@@ -47,23 +45,23 @@
     0 2px 4px rgba(0, 0, 0, 0.2),
     inset 0 -4px 2px rgba(0, 0, 0, 0.2);
   color: white;
+  cursor: pointer;
+  display: block; // Adjust as needed
   margin-bottom: 20px;
   padding: 10px 20px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  display: block; // Adjust as needed
   text-align: center; // Center the text if the buttons are block elements
+  transition: all 0.3s ease;
 
   &:not(:first-child) {
     margin-top: 10px;
   }
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     background: linear-gradient(to right, rgba(65, 105, 225, 0.7), rgba(25, 25, 112, 0.7));
     box-shadow:
       0 4px 8px rgba(0, 0, 0, 0.3),
       inset 0 -6px 3px rgba(0, 0, 0, 0.3);
-    color: #E0FFFF; // A lighter shade for contrast
+    color: #e0ffff; // A lighter shade for contrast
   }
 }
-
