--- a/svc/hecate/src/pages/home/styles.module.scss
+++ b/svc/hecate/src/pages/home/styles.module.scss
@@ -33,6 +33,7 @@
   gap: 50px;
   position: absolute;
   right: 200px;
+  z-index: 12;
 }
 
 .echoButton {
@@ -47,9 +48,6 @@
   text-align: center;
   transition: all 0.3s ease;
 
-  &:not(:first-child) {
-    margin-top: 10px;
-  }
 
   &:hover, &:focus {
     background: linear-gradient(to right, rgba(65, 105, 225, 0.7), rgba(25, 25, 112, 0.7));
