--- a/svc/hecate/src/pages/home/styles.module.scss
+++ b/svc/hecate/src/pages/home/styles.module.scss
@@ -27,12 +27,12 @@
 
 .buttonsContainer {
   align-items: center;
-  bottom: 100px;
+  bottom: 2.5%;
   display: flex;
   flex-direction: row;
   gap: 50px;
   position: absolute;
-  right: 200px;
+  right: 2.5%;
   z-index: 12;
 }
 
